base code Monaco

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -2,6 +2,7 @@
   "Code": {
     "code": "Code",
     "output": "Code output",
-    "run": "Run"
+    "run": "Run",
+    "placeHolder": "the code goes here"
   }
 }
