--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -2,6 +2,7 @@
   "Code": {
     "code": "Código",
     "output": "Código de saída",
-    "run": "Executar"
+    "run": "Executar",
+    "placeHolder": "O código vai aquí"
   }
 }
