--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -9,6 +9,16 @@
     "newFile": "Crear archivo...",
     "newFolder": "Crear carpeta...",
     "renameFile": "Modificar el nombre...",
-    "delete": "Borrar"
+    "delete": "Borrar",
+    "Modal": {
+      "inputFileName": "Introduce el nombre del archivo:",
+      "inputDirectoryName": "Introduce el nombre dela carpeta:",
+      "deleteFolder": "¿Desea eliminar la carpeta seleccionada?",
+      "deleteFile": "¿Desea eliminar el arhchivo seleccionada?"
+    }
+  },
+  "General": {
+    "accept": "Aceptar",
+    "cancel": "Cancelar"
   }
 }
