Change i18n to accept templates

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -14,7 +14,8 @@
       "inputFileName": "Insert the name of the file:",
       "inputDirectoryName": "Insert the folder of the file:",
       "deleteFolder": "Are you sure you want to delete:",
-      "deleteFile": "Are you sure you want to delete:"
+      "deleteFile": "Are you sure you want to delete:",
+      "multipleDelete": "Are you sure you want to delete the following {0} files?"
     }
   },
   "General": {
