--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -14,7 +14,8 @@
       "inputFileName": "Introduce el nombre del archivo:",
       "inputDirectoryName": "Introduce el nombre dela carpeta:",
       "deleteFolder": "¿Desea eliminar la carpeta seleccionada?",
-      "deleteFile": "¿Desea eliminar el arhchivo seleccionada?"
+      "deleteFile": "¿Desea eliminar el arhchivo seleccionada?",
+      "multipleDelete": "Estas seguro de querer borrar los siguientes ficheros {0}?"
     }
   },
   "General": {
