--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -13,6 +13,7 @@
     "Modal": {
       "inputFileName": "Insert the name of the file:",
       "inputDirectoryName": "Insert the folder of the file:",
+      "renameName": "Write the new name of the: '{0}'",
       "deleteFolder": "Are you sure you want to delete:",
       "deleteFile": "Are you sure you want to delete:",
       "multipleDelete": "Are you sure you want to delete the following {0} files?"
