--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -14,6 +14,7 @@
       "inputFileName": "Introduce o nome do arquivo:",
       "inputDirectoryName": "Introduce o nome do cartafol:",
       "deleteFolder": "Desexa eliminar o cartafol seleccionado?",
+      "renameName": "Introduce o novo nome para o arquivo: '{0}'",
       "deleteFile": "Desexa eliminar o arquivo seleccionado?",
       "multipleDelete": "Desexa eliminar os seguintes arquivos {0}?"
     }
