--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -14,8 +14,8 @@
       "inputFileName": "Introduce el nombre del archivo:",
       "inputDirectoryName": "Introduce el nombre dela carpeta:",
       "renameName": "Introduce el nuevo nombre para el fichero: '{0}'",
-      "deleteFolder": "¿Desea eliminar la carpeta seleccionada?",
-      "deleteFile": "¿Desea eliminar el arhchivo seleccionada?",
+      "deleteFolder": "¿Desea eliminar la carpeta '{0}'?",
+      "deleteFile": "¿Desea eliminar el arhchivo '{0}'?",
       "multipleDelete": "Estas seguro de querer borrar los siguientes ficheros {0}?"
     }
   },
