added TostErrors and fix error when display a folder and file with the same name

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -21,6 +21,24 @@
   },
   "General": {
     "accept": "Accept",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "selectFile": "Select a file"
+  },
+  "Errors": {
+    "EMPTY_FOLDER_NAME": "The folder name can't be empty",
+    "EMPTY_FILE_NAME": "The file name can't be empty",
+    "FILE_NOT_FOUND": "The file was not found",
+    "FILE_NAME_ALREADY_EXISTS": "The file name already exists",
+    "INVALID_USER_ID": "Invalid user id",
+    "PARENT_NOT_FOUND": "The specified parent was not found",
+    "DIRECTORY_NOT_FOUND": "The directory was not found",
+    "DIRECTORY_NAME_ALREADY_EXISTS": "The folder name already exists"
+  },
+  "Messages": {
+    "FILE_UPDATED": "The file has been updated successfully",
+    "FILE_DELETED": "The file has been deleted successfully",
+    "DIRECTORY_UPDATED": "The folder has been updated successfully",
+    "DIRECTORY_NAME_UPDATED": "The folder has been deleted successfully",
+    "CONTENT_INSERTED": "The content has been inserted successfully"
   }
 }
