--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -21,6 +21,24 @@
   },
   "General": {
     "accept": "Aceptar",
-    "cancel": "Cancelar"
+    "cancel": "Cancelar",
+    "selectFile": "Selecione un arquivo"
+  },
+  "Errors": {
+    "EMPTY_FOLDER_NAME": "O nome do cartafol non pode estar vacío",
+    "EMPTY_FILE_NAME": "O nome do ficheiro non pode estar vacio",
+    "FILE_NOT_FOUND": "Non se atopou o ficheiro",
+    "FILE_NAME_ALREADY_EXISTS": "Xa existe un ficheiro con este nome",
+    "INVALID_USER_ID": "O identificador do usario é inválido",
+    "PARENT_NOT_FOUND": "O directorio padre especificado non existe",
+    "DIRECTORY_NOT_FOUND": "O cartafol non se atopou",
+    "DIRECTORY_NAME_ALREADY_EXISTS": "Xa existe unha carpeta con ese nombre"
+  },
+  "Messages": {
+    "FILE_UPDATED": "O ficheiro actualizouse correctamente",
+    "FILE_DELETED": "O ficheiro eliminouse correctamente",
+    "DIRECTORY_UPDATED": "O cartafol actualizouse correctamente",
+    "DIRECTORY_NAME_UPDATED": "o cartafol eliminouse correctamente",
+    "CONTENT_INSERTED": "O contido gardouse correctamente"
   }
 }
