--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,11 +22,24 @@
   "General": {
     "accept": "Accept",
     "cancel": "Cancel",
-    "selectFile": "Select a file"
+    "selectFile": "Select a file",
+    "sigIn": "SignIn",
+    "username": "Username",
+    "password": "Password"
   },
   "Errors": {
     "EMPTY_FOLDER_NAME": "The folder name can't be empty",
     "EMPTY_FILE_NAME": "The file name can't be empty",
+    "EMPTY_USER_NAME": "Username cannot be empty.",
+    "EMPTY_PASSWORD": "Password cannot be empty.",
+    "USER_NAME_ALREADY_EXISTS": "User name already exists",
+    "USER_NOT_FOUND": "User not found",
+    "INVALID_CREDENTIALS": "Invalid credentials",
+    "MINIMUN_LENGTH": "Password must be at least 8 characters long.",
+    "DIGITS": "Password must contain at least one digit.",
+    "UPER_CASE": "Password must contain at least one uppercase letter.",
+    "LOWER_CASE": "Password must contain at least one lowercase letter.",
+    "SPECIAL_CHARACTERES": "Password must contain at least one special character.",
     "FILE_NOT_FOUND": "The file was not found",
     "FILE_NAME_ALREADY_EXISTS": "The file name already exists",
     "INVALID_USER_ID": "Invalid user id",
