--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -24,6 +24,9 @@
     "cancel": "Cancelar",
     "selectFile": "Selecione un arquivo",
     "sigIn": "Rexistrarse",
+    "logIn": "Iniciar sesión",
+    "noAccount": "¿Non tes conta?",
+    "register": "Rexistrate",
     "username": "Usuario",
     "password": "Contrasinal"
   },
