--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -30,6 +30,20 @@
     "username": "Username",
     "password": "Password"
   },
+  "Operations": {
+    "number": "Number",
+    "text": "Text",
+    "pow": "Pow",
+    "div": "Division",
+    "minus": "Minus",
+    "add": "Add",
+    "multiplication": "Multiplication",
+    "roundDiv": "Round division",
+    "rem": "Remainder",
+    "boolean": "Boolean",
+    "and": "And",
+    "or": "Or"
+  },
   "Errors": {
     "EMPTY_FOLDER_NAME": "The folder name can't be empty",
     "EMPTY_FILE_NAME": "The file name can't be empty",
