--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -30,6 +30,20 @@
     "username": "Usuario",
     "password": "Contraseña"
   },
+  "Operations": {
+    "number": "Número",
+    "text": "Texto",
+    "pow": "Elevar",
+    "div": "División",
+    "minus": "Resta",
+    "add": "Suma",
+    "multiplication": "Multiplicación",
+    "roundDiv": "División redondeo",
+    "rem": "Modulo",
+    "boolean": "Boolean",
+    "and": "And",
+    "or": "Or"
+  },
   "Errors": {
     "EMPTY_FOLDER_NAME": "El nombre de la carpeta no puede estar vacío",
     "EMPTY_FILE_NAME": "El nombre del fichero no puede estar vacio",
