--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -37,12 +37,28 @@
     "div": "Division",
     "minus": "Minus",
     "add": "Add",
+    "type": "Type",
     "multiplication": "Multiplication",
     "roundDiv": "Round division",
     "rem": "Remainder",
     "boolean": "Boolean",
     "and": "And",
-    "or": "Or"
+    "or": "Or",
+    "not": "Not",
+    "left": "Left",
+    "right": "Right",
+    "var": "Variable",
+    "value": "Value",
+    "name": "Name",
+    "if": "if",
+    "true": "True",
+    "false": "False",
+    "condition": "Condition",
+    "dataFlow": "Data flow",
+    "strictMore": ">",
+    "strictLess": "<",
+    "less": "<=",
+    "more": ">="
   },
   "Errors": {
     "EMPTY_FOLDER_NAME": "The folder name can't be empty",
