--- a/src/i18n/locales/gl.json
+++ b/src/i18n/locales/gl.json
@@ -117,6 +117,8 @@
       "LOGIC_BOOLEAN_TRUE": "Verdadeiro",
       "LOGIC_BOOLEAN_FALSE": "Falso",
       "LOGIC_NEGATE_TITLE": "no %1",
+      "LOGIC_OPERATION_AND": "e",
+      "LOGIC_OPERATION_OR": "ou",
       "Blocks": {
         "CUSTOM_IF": "se %1 enton %2",
         "CUSTOM_IF_TOOLTIP": "Bloque condicional",
@@ -156,6 +158,7 @@
     "Variables": {
       "MODULE_NAME": "Variables",
       "CREATE_VAR": "Crear variable...",
+      "SET": "establecer %1 a %2",
       "NEW_VARIABLE_TITLE": "Novo nome para a variable:",
       "VARIABLE_ALREADY_EXISTS": "A variable co nome '%1' xa existe."
     },
@@ -165,6 +168,8 @@
       "PROCEDURES_DEFNORETURN_TITLE": "función",
       "PROCEDURES_DEFNORETURN_DO": "facer",
       "PROCEDURES_MUTATORCONTAINER_TITLE": "entradas",
+      "PROCEDURES_BEFORE_PARAMS": "con:",
+
       "PROCEDURES_MUTATORARG_TITLE": "nome da entrada",
       "Blocks": {
         "CALL": "Chamar a %1",
