--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -66,6 +66,7 @@
       "ADD_COMMENT": "Add Comment",
       "REMOVE_COMMENT": "Remove Comment",
       "EXTERNAL_INPUTS": "External Inputs",
+      "PROCEDURES_CREATE_DO": "Create \"%1\"",
       "INLINE_INPUTS": "Inline Inputs",
       "HORIZONTAL_PARAMETERS": "Horizontal Parameters",
       "VERTICAL_PARAMETERS": "Vertical Parameters",
@@ -208,7 +209,16 @@
         "RETURN_TOOLTIP": "Return a value"
       }
     },
-    "GENERATE_CODE": "Generate code"
+    "Backpack": {
+      "EMPTY_BACKPACK": "Empty",
+      "REMOVE_FROM_BACKPACK": "Remove from Backpack",
+      "COPY_TO_BACKPACK": "Copy to Backpack",
+      "COPY_ALL_TO_BACKPACK": "Copy All Blocks to Backpack",
+      "PASTE_ALL_FROM_BACKPACK": "Paste All Blocks from Backpack"
+    },
+    "GENERATE_CODE": "Generate code",
+    "COPY": "Copy",
+    "PASTE": "Paste"
   },
   "Errors": {
     "EMPTY_FOLDER_NAME": "The folder name can't be empty",
